# chat_with_me

./: Makefile  pyproject.toml
app/: config.py  main.py  schema.py
notebooks/: rag.ipynb
src/rag_core/: index.py  utils.py
